--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,11 +4,14 @@
     <title>Web page #1</title>
 </head>
 <body>
+    <img src="EX12_NMUEAE5Nnz.jpg" alt="Metal Gear?">
     <h1>My first web page</h1>
-    <h2>Written with no help</h2>
+    <h2>Written with <em>no help</em></h2>
+    <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
 
-    <p>This is my first web page</p>
+    <p>This is my <strong>first web page</strong>!</p>
     <p>It sucks</p>
+    <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
 
     <p>Here are some things I'm going to learn about coding:</p>
     <ul>
