--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -4,7 +4,7 @@
     <title>Web page #1</title>
 </head>
 <body>
-    <img src="EX12_NMUEAE5Nnz.jpg" alt="Metal Gear?">
+    <img src="img/EX12_NMUEAE5Nnz.jpg" alt="Metal Gear?">
     <h1>My first web page</h1>
     <h2>Written with <em>no help</em></h2>
     <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
