add styles for favorite-places.html

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
+    <link href="css/favorite-things-styles.css" rel="stylesheet" type="text/css">
     <title>Micheal's favorite things</title>
 </head>
+
 <body>
     <h1>My favorite things</h1>
     <h2>These are a few of my favorite things</h2>
@@ -19,17 +22,17 @@
             <ul>
                 <li>
                     <a href="http://www.example.com/steve.html"><strong>Steve</strong>
-                    <img src="img/steve.jpg" alt="A photo of my dad"></a>
+                        <img src="img/steve.jpg" alt="A photo of my dad"></a>
                 </li>
                 <li>
                     <a href="http://www.example.com/carol.html"><strong>Carol</strong>
-                    <img src="img/carol.jpg" alt="A photo of my mom"></a>
+                        <img src="img/carol.jpg" alt="A photo of my mom"></a>
                 </li>
             </ul>
         </li>
         <li>
             <a href="http://www.example.com/jessica">My friend <strong>Jessica</strong>
-            <img src="img/jessica.jpg" alt="A photo of Jessica"></a>
+                <img src="img/jessica.jpg" alt="A photo of Jessica"></a>
         </li>
         <li>My friend Candy</li>
     </ul>
@@ -37,11 +40,16 @@
     <h3>Flavors of ice cream</h3>
     <p>These are my three favorites, in order:</p>
     <ol>
-        <li>Pistachio</li>
+        <li>
+            <a href="https://www.epicurious.com/recipes/food/views/pistachio-ice-cream-5902"><strong>Pistachio</strong>
+                <img src="https://assets.epicurious.com/photos/5747b49a5a5fbbae31ae4aed/6:4/w_620%2Ch_413/shutterstock_303021722.jpg"
+                    alt="A photo of pistachio ice cream"></a>
+        </li>
         <li>Malted milk chocolate</li>
         <li>Black licorice</li>
     </ol>
 
     <p>Thanks for reading about me!</p>
 </body>
+
 </html>
