--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -9,7 +9,7 @@
     <h2>Written with <em>no help</em></h2>
     <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
 
-    <p>This is my <strong>first web page</strong>!</p>
+    <p>This is my <strong>first web-page</strong>!</p>
     <p>It sucks</p>
     <p>Here is a link to my <a href="favorite-things.html">favorite things</a>.</p>
 
